# flashpoint

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  docker-compose.yml  main.cpp  readme.md
.circleci/: config.yml
bench/int_string_alloc/: test.cpp
bench/libuv_stream_write/: stream_write.cpp
certs/: cert.pem  key.pem
cmake/lib/: utils.cmake
cmake/modules/: find_glib.cmake
docker/: dev.env.flashpoint.dockerfile
src/: program.cpp  test.cpp
src/lib/: character.h  command.cpp  command.h  http_parser.cpp  http_parser.h  http_scanner.cpp  http_scanner.h  memory_pool.cpp  memory_pool.h  tcp_client.cpp  tcp_client.h  tcp_client_raw.cpp  tcp_client_raw.h  test_definition.cpp  test_definition.h  text_annotater.cpp  text_annotater.h  text_span.cpp  text_span.h  text_writer.cpp  text_writer.h  types.h  utils.cpp  utils.h
src/lib/graphql/: graphql_parser.cpp  graphql_parser.h  graphql_scanner.cpp  graphql_scanner.h  graphql_syntaxes.h
src/lib/graphql/tests/cases/: Some.qraphql
src/program/: HttpException.cpp  HttpException.h  HttpParser.cpp  HttpParser.h  HttpServer.cpp  HttpServer.h  HttpWriter.cpp  HttpWriter.h  diagnostic.cpp  diagnostic.h  diagnostic_impl.h  http_exception.cpp  http_exception.h  http_parser.cpp  http_parser.h  http_response.cpp  http_response.h  http_scanner.cpp  http_scanner.h  http_server.cpp  http_server.h  tcp_client.cpp  tcp_client.h
src/program/graphql/: graphql_diagnostics.cpp  graphql_diagnostics.h  graphql_diagnostics.json  graphql_executor.cpp  graphql_executor.h  graphql_parser.cpp  graphql_parser.h  graphql_parser_impl.h  graphql_scanner.cpp  graphql_scanner.h  graphql_schema.cpp  graphql_schema.h  graphql_symbol_writer.cpp  graphql_symbol_writer.h  graphql_syntaxes.cpp  graphql_syntaxes.h
src/program/graphql/graqhql_test_server/: .editorconfig  package.json  server.ts  tsconfig.json
src/program/graphql/tests/cases/: (comment) -- should skip comments.graphql  (utf8) - bom -- should be able to handle utf-8 bom.graphql
src/program/graphql/tests/cases/arguments/: (argument) - argument-list - double-colon -- should error on double colons.graphql  (argument) - argument-list - missing-close-bracket -- should error on missing close bracket.graphql  (argument) - argument-list - missing-open-bracket -- should error on missing open bracket.graphql  (argument) - argument-list -- should be able to have an argument list.graphql  (argument) - argument-list-with-mismatched-types -- should error when wrong types are provided in an argument.graphql  (argument) - duplicate argument -- should error on duplicate argument.graphql  (argument) - duplicate-field -- should error on duplicate field.graphql  (argument) - field-type-assignment(null-to-non-null-int) -- should error when a field value of null is assigned to a field of type non-null int.graphql  (argument) - field-type-assignment(string-to-int) -- should error when a field value of type string is assigned to a field of type int.graphql  (argument) - many-undefined-arguments -- should error on multiple undefined arguments.graphql  (argument) - missing-non-nullable-argument -- should error on missing non-nullable argument.graphql  (argument) - missing-required-field - non-null-list -- should error on missing required field.graphql  (argument) - missing-required-field -- should error on missing required field.graphql  (argument) - one-undefined-argument -- should error on one undefined argument.graphql  (argument) - undefined-arguments-first-position -- should error on undefined arguments located in the first position.graphql  (argument) - undefined-arguments-last-position -- should error on undefined arguments located in the last position.graphql  (argument) - undefined-arguments-middle-position -- should error on undefined arguments located in the middle position.graphql  (argument) - undefined-object-field(many) -- should error on many undefined object field.graphql  (argument) - undefined-object-field(one) -- should error on undefined object field.graphql
src/program/graphql/tests/cases/description/: (description) - block-comment - escaped-unicode -- should be able to define block comment.graphql  (description) - block-comment - multi-line -- should be able to define block comment.graphql  (description) - line-comment - escaped-unicode - extra-characters -- should not escape extra characters.graphql  (description) - line-comment - escaped-unicode - lack-of-characters -- should error on lack of characters.graphql  (description) - line-comment - escaped-unicode -- should be able to define line description with escaped unicode.graphql  (description) - line-comment - new-line -- should error on newline.graphql  (description) - line-comment - special-characters -- should be able to define line comment with special characters.graphql  (description) - line-comment -- should be able to line comment.graphql
src/program/graphql/tests/cases/enums/: (enum) - no-close-brace -- should error on no close brace.graphql  (+7 more)
src/program/graphql/tests/references/: (comment) -- should skip comments.errors  (utf8) - bom -- should be able to handle utf-8 bom.errors
src/program/tests/: test2.xml
src/program/tests/cases/: test.http  test.http_test
src/program/tests/references/: test.http
src/test/: GraphQlTestCaseScanner.cpp  GraphQlTestCaseScanner.h  ScanningTextCursor.h  ServerTestScanner.cpp  ServerTestScanner.h  TestExceptions.cpp  TestExceptions.h  baseline_test_runner.cpp  baseline_test_runner.h  diagnostic_writer.cpp  diagnostic_writer.h  test_case_diagnostics.cpp  test_case_diagnostics.h  test_case_diagnostics.json  test_case_scanner.cpp  test_case_scanner.h  test_definition.cpp  test_definition.h
src/test/test_server/: package-lock.json  package.json  tcp-test.js  test.ts  tsconfig.json
tasks/: generate_diagnostics.cpp
(+378 files in other folders)
